Closed Bug 198542 Opened 22 years ago Closed 22 years ago

missing #ifndef/#endif directives in nsITextControlFrame.h

Categories

(Core :: Layout: Form Controls, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: yuanyi21, Assigned: yuanyi21)

Details

Attachments

(1 file)

so it can not be included more than once. Other .h files in layout\html\forms\public have this directives.
Attachment #117978 - Flags: review+
Attachment #117978 - Flags: superreview?(Henry.Jia)
Comment on attachment 117978 [details] [diff] [review] very simple patch sr=Henry
Attachment #117978 - Flags: superreview?(Henry.Jia) → superreview+
fixed!
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: