Bug 198542 missing #ifndef/#endif directives in nsITextControlFrame.h r=jkeiser, sr=henry.jia